refactor: normalize project name to lowercase dns-tester-go
